--- a/starter/index.html
+++ b/starter/index.html
@@ -13,7 +13,7 @@
     }
   </style>
   <body>
-    <h1>Strategy Pattern</h1>
+    <h1>Pattern</h1>
 
     <script src="./app.js"></script>
   </body>
