new design pattern

--- a/Proxy Pattern/index.html
+++ b/Proxy Pattern/index.html
@@ -13,7 +13,7 @@
     }
   </style>
   <body>
-    <h1>Proxy Pattern</h1>
+    <h1>Observer Pattern</h1>
 
     <script src="./app.js"></script>
   </body>
