--- a/Visitor Pattern/index.html
+++ b/Visitor Pattern/index.html
@@ -13,7 +13,7 @@
     }
   </style>
   <body>
-    <h1>Mediator Pattern</h1>
+    <h1>Visitor Pattern</h1>
 
     <script src="./app.js"></script>
   </body>
